--- a/exercises/practice/tournament/.meta/config.json
+++ b/exercises/practice/tournament/.meta/config.json
@@ -1,7 +1,7 @@
 {
   "blurb": "Tally the results of a small football competition.",
   "authors": ["MichaelBunker"],
-  "contributors": [],
+  "contributors": ["dstockto"],
   "files": {
     "solution": ["Tournament.php"],
     "test": ["TournamentTest.php"],
