--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "require-dev": {
     "php": "^7.4|^8.0",
     "slevomat/coding-standard": "^7.0",
-    "squizlabs/php_codesniffer": "^3.6"
+    "squizlabs/php_codesniffer": "^3.6",
+    "laminas/laminas-coding-standard": "^2.3"
   },
   "scripts": {
     "lint:check": "./vendor/bin/phpcs --ignore=*/hello-world/* --standard=phpcs-php.xml ./exercises",
