Flip about and introduction, add an example to introduction

--- a/concepts/covariance-and-contravariance/.meta/config.json
+++ b/concepts/covariance-and-contravariance/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "authors": ["dstockto"],
-  "blurb": "covariance and contravariance in PHP",
+  "blurb": "Covariance and Contravariance in PHP",
   "contributors": []
 }
