--- a/concepts/anonymous-functions-closures/.meta/config.json
+++ b/concepts/anonymous-functions-closures/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "blurb": "`anonymous functions and closures` concept in PHP",
-  "authors": ["TBD"],
+  "authors": ["dstockto"],
   "contributors": []
 }
