`https` instead of `http`
I realized that some links are still using http protocol.
There are 28 links using https in 26 files and there are 10 links using http in 10 files.
This causes async and http is not secure so I edited the whole link using http protocol to https.

--- a/exercises/practice/atbash-cipher/.meta/config.json
+++ b/exercises/practice/atbash-cipher/.meta/config.json
@@ -8,5 +8,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Wikipedia",
-  "source_url": "http://en.wikipedia.org/wiki/Atbash"
+  "source_url": "https://en.wikipedia.org/wiki/Atbash"
 }
