`https` instead of `http`
Here is the rest.

--- a/exercises/practice/allergies/.meta/config.json
+++ b/exercises/practice/allergies/.meta/config.json
@@ -15,5 +15,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Jumpstart Lab Warm-up",
-  "source_url": "http://jumpstartlab.com"
+  "source_url": "https://jumpstartlab.com"
 }
