--- a/exercises/practice/book-store/.meta/config.json
+++ b/exercises/practice/book-store/.meta/config.json
@@ -8,5 +8,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Inspired by the harry potter kata from Cyber-Dojo.",
-  "source_url": "http://cyber-dojo.org"
+  "source_url": "https://cyber-dojo.org"
 }
