--- a/exercises/practice/diamond/.meta/config.json
+++ b/exercises/practice/diamond/.meta/config.json
@@ -8,5 +8,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Seb Rose",
-  "source_url": "http://claysnow.co.uk/recycling-tests-in-tdd/"
+  "source_url": "https://claysnow.co.uk/recycling-tests-in-tdd/"
 }
