--- a/exercises/practice/grade-school/.meta/config.json
+++ b/exercises/practice/grade-school/.meta/config.json
@@ -16,5 +16,5 @@
     "example": [".meta/example.php"]
   },
   "source": "A pairing session with Phil Battos at gSchool",
-  "source_url": "http://gschool.it"
+  "source_url": "https://gschool.it"
 }
