--- a/exercises/practice/leap/.meta/config.json
+++ b/exercises/practice/leap/.meta/config.json
@@ -15,5 +15,5 @@
     "example": [".meta/example.php"]
   },
   "source": "JavaRanch Cattle Drive, exercise 3",
-  "source_url": "http://www.javaranch.com/leap.jsp"
+  "source_url": "https://www.javaranch.com/leap.jsp"
 }
