--- a/exercises/practice/pascals-triangle/.meta/config.json
+++ b/exercises/practice/pascals-triangle/.meta/config.json
@@ -14,5 +14,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Pascal's Triangle at Wolfram Math World",
-  "source_url": "http://mathworld.wolfram.com/PascalsTriangle.html"
+  "source_url": "https://mathworld.wolfram.com/PascalsTriangle.html"
 }
