--- a/exercises/practice/bowling/.meta/config.json
+++ b/exercises/practice/bowling/.meta/config.json
@@ -16,5 +16,5 @@
     "example": [".meta/example.php"]
   },
   "source": "The Bowling Game Kata at but UncleBob",
-  "source_url": "http://butunclebob.com/ArticleS.UncleBob.TheBowlingGameKata"
+  "source_url": "https://butunclebob.com/ArticleS.UncleBob.TheBowlingGameKata"
 }
