--- a/exercises/practice/etl/.meta/config.json
+++ b/exercises/practice/etl/.meta/config.json
@@ -8,5 +8,5 @@
     "example": [".meta/example.php"]
   },
   "source": "The Jumpstart Lab team",
-  "source_url": "http://jumpstartlab.com"
+  "source_url": "https://jumpstartlab.com"
 }
