--- a/exercises/practice/gigasecond/.meta/config.json
+++ b/exercises/practice/gigasecond/.meta/config.json
@@ -21,5 +21,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Chapter 9 in Chris Pine's online Learn to Program tutorial.",
-  "source_url": "http://pine.fm/LearnToProgram/?Chapter=09"
+  "source_url": "https://pine.fm/LearnToProgram/?Chapter=09"
 }
