--- a/exercises/practice/ocr-numbers/.meta/config.json
+++ b/exercises/practice/ocr-numbers/.meta/config.json
@@ -8,5 +8,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Inspired by the Bank OCR kata",
-  "source_url": "http://codingdojo.org/cgi-bin/wiki.pl?KataBankOCR"
+  "source_url": "https://codingdojo.org/cgi-bin/wiki.pl?KataBankOCR"
 }
