--- a/config.json
+++ b/config.json
@@ -856,6 +856,14 @@
       "concepts": ["switch statement"],
       "prerequisites": [],
       "status": "beta"
+    },
+    {
+      "name": "Ternary Operator",
+      "slug": "ternary-operator",
+      "uuid": "7c88c634-4ca9-4e4b-ab3f-6155b4ca9800",
+      "concepts": ["ternary operator"],
+      "prerequisites": [],
+      "status": "beta"
     }
   ],
   "key_features": [
